# BESTIE

./: LICENSE  README.md  apply_net_to_dataframe.py  plot_results.py  pyproject.toml  setup.cfg  test_hist.py  test_llh.py
BESTIE/: __init__.py  pipeline.py  plot_results.py  plot_results_old.py  train_script.py  train_shape.py  training.py  training_old.py  training_optimized.py
BESTIE/NNMFit_handlers/: NNMFit_handler.py
BESTIE/configs/: README  dataset_cringe.yaml  dataset_for_standard_binning.yaml  dataset_standard.yaml  dataset_standard_bdt_azimuth.yaml  general_config_SPL.yaml  general_config_galactic.yaml
BESTIE/data/: __init__.py  dataset.py  fourier_feature_mapping.py  make_dataset.py  make_torch_dataset.py  prepare_data.py  sample_weights.py
BESTIE/data_loaders/: make_sample_weights.py
BESTIE/hists/: __init__.py  bKDE.py  hist_handler.py  standard_binning.py  tanh_binning.py  vector_hist.py
BESTIE/llh/: __init__.py  say_llh.py
BESTIE/losses/: __init__.py  bin_loss.py  fisher_losses.py  loss_handler.py  scan_loss.py
BESTIE/nets/: __init__.py  build_jax.py  build_model.py  learning_rates.py  model_handler.py  utilities.py
BESTIE/training/: evaluate.py  train.py
BESTIE/transformations/: __init__.py  cyclic_restricted_norm.py  linear_scaling.py  no_scaling.py  transformation_handler.py
BESTIE/utilities/: __init__.py  calc_lss.py  configs.py  plot_routine.py
BESTIE/weights/: weight_handler.py
src/: memory.prof
src/BESTIE/: .gitignore  __init__.py  pipeline.py  train_shape.py  training.py
tests/: README  test_pipeline.py
(+58 files in other folders)
