[metadata]
name = BESTIE
version = 0.1.0
description = "BESTIE - A Framework for End-to-End Optimized Summary Statistics for Binned Forward-Folding Likelihood"
download_url = "https://github.com/ojanik/BESTIE"
author = "Oliver Janik",
author_email = "oliver.janik@fau.de",
long_description = file: README.rst, LICENSE; add CHANGELOG.rst ?
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    h5py==3.11.0
    numpy==1.25.2
    pandas==2.2.2
    PyYAML==6.0.2
    scipy==1.12.0
    tables==3.10.1
    flax==0.10.2
    matplotlib==3.9.2
    jaxopt==0.8.3
    tqdm==4.67.1
